// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SessionExpiredBanner stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="max-w-2xl mx-auto p-6"
>
  <div
    class="relative w-full rounded-ui border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90"
    data-slot="alert"
    data-testid="session-expired-banner"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      Your session has expired. Log in again.
       
      <a
        class="font-medium underline underline-offset-2 hover:no-underline"
        href="/login?returnUrl=%2Fcheckout&error=session_expired"
      >
        Sign In
      </a>
    </div>
  </div>
</div>
`;

exports[`SessionExpiredBanner stories snapshot > WithCustomReturnUrl story renders and matches snapshot 1`] = `
<div
  class="max-w-2xl mx-auto p-6"
>
  <div
    class="relative w-full rounded-ui border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90"
    data-slot="alert"
    data-testid="session-expired-banner"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      Your session has expired. Log in again.
       
      <a
        class="font-medium underline underline-offset-2 hover:no-underline"
        href="/login?returnUrl=%2Fcheckout%3Fstep%3Dpayment&error=session_expired"
      >
        Sign In
      </a>
    </div>
  </div>
</div>
`;
